--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Baking Recipes</title>
+  <title>Dough, Dad, Done!</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
   <link rel="stylesheet" href="css/custom.css">
 </head>
@@ -11,18 +11,21 @@
   <header class="container">
     <nav>
       <ul>
-        <li><strong>Baking Recipes</strong></li>
+        <li><strong>Dough, Dad, Done!</strong></li>
       </ul>
+      <!-- Nav Links -->
+      <!--
       <ul>
         <li><a href="index.html" class="contrast">Home</a></li>
         <li><a href="favorites.html" class="contrast">Favorites</a></li>
       </ul>
+      -->
     </nav>
   </header>
 
   <main class="container">
     <section>
-      <h1>Find Your Perfect Recipe</h1>
+      <h1 class="site-header">Find Your Perfect Recipe</h1>
       <input type="search" id="search-input" name="search" placeholder="Search recipes by name, ingredient, or tag...">
     </section>
 
@@ -47,7 +50,7 @@
   </main>
 
   <footer class="container">
-    <small>Baking Recipes - Made with love for bakers</small>
+    <small>Simple recipes from a simple baker</small>
   </footer>
 
   <script src="js/recipes.js"></script>
