--- a/recipe.html
+++ b/recipe.html
@@ -11,12 +11,15 @@
   <header class="container">
     <nav>
       <ul>
-        <li><strong>Baking Recipes</strong></li>
+        <li><strong><a href="index.html" class="contrast">Dough, Dad, Done!</a></strong></li>
       </ul>
+      <!-- Nav Links -->
+      <!--
       <ul>
         <li><a href="index.html" class="contrast">Home</a></li>
         <li><a href="favorites.html" class="contrast">Favorites</a></li>
       </ul>
+      -->
     </nav>
   </header>
 
@@ -33,10 +36,10 @@
       </header>
 
       <div class="recipe-actions">
-        <button id="favorite-btn" class="outline">
+        <button id="favorite-btn" class="primary">
           <span id="favorite-icon">♡</span> Add to Favorites
         </button>
-        <button id="print-btn" class="outline">
+        <button id="print-btn" class="primary">
           Print Recipe
         </button>
       </div>
