--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="container">
     <nav>
       <ul>
-        <li><strong>Dough, Dad, Done!</strong></li>
+        <li><a href="index.html" class="title-link">Dough, Dad, Done!</a></li>
       </ul>
       <!-- Nav Links -->
       <!--
@@ -36,7 +36,6 @@
         <button class="category-btn" data-category="cakes">Cakes</button>
         <button class="category-btn" data-category="bread">Bread</button>
         <button class="category-btn" data-category="pastries">Pastries</button>
-        <button class="category-btn" data-category="pies">Pies</button>
       </div>
     </section>
 
