--- a/recipe.html
+++ b/recipe.html
@@ -11,7 +11,7 @@
   <header class="container">
     <nav>
       <ul>
-        <li><strong><a href="index.html" class="contrast">Dough, Dad, Done!</a></strong></li>
+        <li><a href="index.html" class="title-link">Dough, Dad, Done!</a></li>
       </ul>
       <!-- Nav Links -->
       <!--
