add more recipes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <button class="category-btn" data-category="cookies">Cookies</button>
         <button class="category-btn" data-category="cakes">Cakes</button>
         <button class="category-btn" data-category="bread">Bread</button>
-        <button class="category-btn" data-category="pastries">Pastries</button>
+        <button class="category-btn" data-category="breakfast">Breakfast</button>
       </div>
     </section>
 
